methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
def faireMotif() {
^PictureMono2:1: error: expected class or object definition
def faireMotif() {
^PictureMono2:29: error: expected start of definition
override def run {
         ^